# interactive-dashboards-project_chantal

./: README.md  create_giis.py  init_app.py  pyproject.toml  utils.py
data/atlases/: NMT_v2.0_asym_surfaces_lh.gray_surface.rsl.gii  NMT_v2.0_asym_surfaces_rh.gray_surface.rsl.gii  roi-5_L_V3_acc_05-dims_lh.gii
data/stats-maps/: roi-5_L_V3_acc_05-dims_lh.csv
