[project]
name = "interactive-dashboards-project"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "ipyniivue>=2.4.4",
    "marimo>=0.23.1",
    "matplotlib>=3.10.8",
    "nibabel>=5.4.2",
    "nilearn>=0.13.1",
    "numpy>=2.4.4",
    "openai==2.32.0",
    "pandas>=3.0.2",
    "pydantic-ai-slim==1.84.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.11",
]
